2016-07-19  Even Rouault <even.rouault@spatialys.com>

        * New 3.2.0 release

2016-07-11  Even Rouault <even.rouault@spatialys.com>

    * ogdi/c-api/ecs_dyna.c: fix ecs_OpenDynamicLib on 64 bit Windows (OGDI #72)
    * external/rpc_win32/LIBRPC/xdr_floa.c: make it work on AMD64
    * Make iconv dependency optional and detect it in configure
    * makefile: if TARGET=win32, create config/common.mak from config/common.mak.in
    * config/win32: remove FLAGS_X86DEF = /D_X86_ no longer needed

2016-07-08  Even Rouault <even.rouault@spatialys.com>

    Fix various compilation problems on Windows (contributed by Jerome Siot)

2016-07-07  Even Rouault <even.rouault@spatialys.com>

    * ogdi/driver/vrf/utils.c: fix stack buffer overflow in vrf_GetMetadata()
    when reading the level in CAT files. Found by GCC 5.2 -faddress=sanitize

2016-07-06  Even Rouault <even.rouault@spatialys.com>

    * ogdi/include/ecs_util.h: upgrade OGDI_RELEASEDATE to 20160705
    * ogdi/c-api/server.c: fix memory leaks in error code paths of svr_CreateServer()
    * ogdi/c-api/ecsassoc.c: ecs_SetError(): display error message on stderr if memory
    allocation fails.
    * ogdi/driver/vrf/feature.c: add heuristics in vrf_get_ring_coords() to
    detect cycling topology of edges that lead to endless looping and eventually
    crashes. Be robust to memory allocation failures in various places, and
    properly cleanup allocated structures when returning.
    * ogdi/driver/vrf/object.c: implement ecs_SetErrorShouldStop() logic in
    the various _getNext.... methods
    * ogdi/driver/vrf/vrf.c: fix memory leaks in error code paths of dyn_SelectLayer()
    * vpflib/vpfread.c: index_pos(): no longer clamp index values to [1,table.nrows] but
    error out. read_new_row(): be robust to memory allocation failures.
    * vpflib/vpftable.c: vpf_open_table(): be robust to wrong nrows values for
    memory tables.

2016-07-04  Even Rouault <even.rouault@spatialys.com>
